# botify

./: .gitignore  Dockerfile  README.md  appspec.yml  buildspec.yml  container-command.sh  docker-compose-prod.yaml  docker-compose.yaml  login-container.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js
botify/: fetch_secrets.py  manage.py
botify/assets/: package-lock.json  package.json
botify/assets/css/: style.css  styles.css
botify/botify/: asgi.py  production_settings.py  settings.py  urls.py  views.py  wsgi.py
botify/customusers/: admin.py  forms.py  models.py  urls.py  views.py
botify/customusers/migrations/: 0001_initial.py
botify/customusers/templates/: login.html
botify/songs/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
botify/songs/migrations/: 0001_add_song_model.py  0002_change_name_artist_to_user.py  0003_add_song_description.py  0004_add_created_at.py  0005_add_thumbnail_field.py  0006_add_song_likes.py  0007_add_comment_table.py  0008_alter_comment_options.py  0009_create_temp_thumbnail.py  0010_add_temp_thumbnail_width_height.py
botify/songs/templates/songs/: choose_thumbnails.html  song_detail.html  upload_song.html
botify/songs/templatetags/: custom_filters.py
botify/songs/thumbnail_creator/: __init__.py
botify/templates/: base.html  dashboard.html  index.html  index_audio.html  index_video.html  nav.html
nginx/: Dockerfile  nginx.conf
scripts/: after_install.sh  before_install.sh
