[tool.poetry]
name = "botify"
version = "0.1.0"
description = "clone of spotify"
authors = ["Andreas Cormack"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.2"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
boto3 = "^1.34.74"
django-storages = "^1.14.2"
pillow = "^10.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
